--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="Shubham" content="">
+    <meta name="description" content="An app to find and buy html templates online using paypal.">
+    <meta name="author" content="Shubham">
     <link rel="icon" href="../../favicon.ico">
 
     <title>TemplateStore</title>
